<resources>

    <string name="app_name">GinoPayDemo</string>

    <string name="start_connection">Start Connection</string>
    <string name="power_on_icc">Power On Icc</string>
    <string name="power_off_icc">Power Off Icc</string>
    <string name="clear_log">Clear Log</string>
    <string name="send_apdu">Send APDU</string>
    <string name="cancel">Cancel</string>
    <string name="connection">Connection</string>
    <string name="discovered_devices">Discovered Devices</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="bluetooth_devices">Bluetooth Devices</string>
    <string name="status">status</string>

    <string name="bluetooth_2_detected">Bluetooth 2 detected</string>
    <string name="connecting_bluetooth">Connecting Bluetooth&#8230;</string>
    <string name="connecting_bluetooth_2">Connecting Bluetooth 2&#8230;</string>
    <string name="connecting_bluetooth_4">Connecting Bluetooth 4&#8230;</string>

    <string name="please_insert_card">Please insert card</string>
    <string name="please_swipe_card">Please swipe card</string>
    <string name="please_swipe_insert_card">Please swipe/insert card</string>
    <string name="please_tap_card">Please tap card</string>
    <string name="please_swipe_tap_card">Please swipe/tap card</string>
    <string name="please_insert_tap_card">Please insert/tap card</string>
    <string name="please_swipe_insert_tap_card">Please swipe/insert/tap card</string>
    <string name="no_card_detected">No card detected</string>

    <string name="bluetooth_permission_denied">Bluetooth permission denied</string>

    <string name="please_power_on_icc">Please power on ICC first</string>
    <string name="apdu_failed">APDU Failed</string>
    <string name="apdu_result">APDU Result:</string>
    <string name="no_aid_matched">No AID matched</string>
    <string name="sending">Sending:</string>
    <string name="power_on_icc_success">Power on ICC Success</string>
    <string name="ks">KSN</string>
    <string name="atr">ATR:</string>
    <string name="atr_length">ATR Length:</string>
    <string name="ksn">KSN: </string>
    <string name="epb">EPB: </string>
    <string name="power_on_icc_failed">Power on ICC Failed</string>

</resources>
